--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,10 @@
 :root {
   --cor-de-fundo: #ebecee;
   --branco: #ffffff;
+  --laranja: #eb9b00;
+  --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
 }
 
-bory {
+body {
   background-color: var(--cor-de-fundo);
-}
-
-h1 {
-  background-color: white;
 }
