--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,12 @@
   --branco: #ffffff;
   --laranja: #eb9b00;
   --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
+  --font-principal: "Poppins";
 }
 
 body {
   background-color: var(--cor-de-fundo);
+  font-family: var(--font-principal);ss
+  font-size: 16px;
+  font-weight: 400;
 }
