--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url("styles/header.css");
+@import url("styles/banner.css");
 
 :root {
   --cor-de-fundo: #ebecee;
@@ -10,7 +11,7 @@
 
 body {
   background-color: var(--cor-de-fundo);
-  font-family: var(--font-principal);ss
+  font-family: var(--font-principal);
   font-size: 16px;
   font-weight: 400;
 }
