--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
   --laranja: #eb9b00;
   --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
   --font-principal: "Poppins";
+  --azul: #002f52;
 }
 
 body {
