--- a/styles/carrosel.css
+++ b/styles/carrosel.css
@@ -18,4 +18,56 @@
 }
 
 .swiper-pagination {
+  position: initial;
+  margin: 0.5em 0;
+}
+
+.card__descricao {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0.5em;
+}
+
+.card__botoes {
+  display: flex;
+  justify-content: space-between;
+}
+
+.botoes {
+  display: flex;
+}
+
+.card {
+  background: var(--branco);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  margin: 1em;
+  padding: 1em;
+}
+
+.descricao__titulo {
+  color: var(--laranja);
+  font-weight: 700;
+}
+
+.descricao__titulo-livro {
+  color: var(--azul);
+  font-weight: 700;
+  font-size: 18px;
+  margin: 0.5em 0;
+}
+
+.descricao__texto {
+  font-size: 14px;
+}
+
+.botoes__ancora {
+  color: var(--branco);
+  font-weight: 700;
+  text-decoration: none;
+  background-color: var(--laranja);
+  padding: 1em 2.2em;
+}
+.botoes__item {
+  margin: 0 0.5em;
 }
