Lista de topicos

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 @import url("styles/banner.css");
 @import url("styles/carrosel.css");
 @import url("styles/carrosel2.css");
+@import url("styles/topicos.css");
 
 :root {
   --cor-de-fundo: #ebecee;
